eks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-bank-api-deployment
  labels:
    app: simple-bank-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-bank-api
  template:
    metadata:
      labels:
        app: simple-bank-api
    spec:
      containers:
      - name: simple-bank-api
        image: 950614484589.dkr.ecr.ap-east-1.amazonaws.com/simplebank:9fe3dc4f280b0e843449acb72120fa14d00e5284
        ports:
        - containerPort: 8080
